-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14
-
None
-
a439a25f468d8c5623f2e0949b55a0c85c850f5f (qt/qtdeclarative/5.14)
This QML code causes the following error when run with Qt 5.15:
"AnimatedImage.onCurrentFrameChanged" is not available in QtQuick 2.0.
test.qml
import QtQuick 2.7
AnimatedImage {
onCurrentFrameChanged: {
}
}
I suspect https://codereview.qt-project.org/c/qt/qtdeclarative/+/142887 as the culprit.
I could raise the version of the import, but then I can't run the program with anything before Qt 5.14.
- relates to
-
QTBUG-122173 tst_qquickanimatedimage::currentFrame() is flaky on windows
-
- Closed
-
For Gerrit Dashboard: QTBUG-78713 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
274962,2 | Ensure AnimatedImage currentFrame/onCurrentFrameChanged 2.0 compatibility | 5.14 | qt/qtdeclarative | Status: MERGED | +2 | 0 |